--- a/styles.css
+++ b/styles.css
@@ -5,9 +5,24 @@
 
 .wrapper {
   margin: 0 auto;
-  width: 1000px;
+  width: 80%;
 }
 
-video {
-  withd
+.videowrapper {
+   position: relative;
+   padding-bottom: 56.25%;
+   padding-top: 25px;
+   height: 0px;
 }
+.videowrapper iframe {
+  position: absolute;
+  left: 0px;
+  top:0px;
+  right: 0px;
+  bottom:0px;
+  height: 100%;
+  width: 100%;
+
+ 
+}
+
